--- a/configuration/buildspec.yml
+++ b/configuration/buildspec.yml
@@ -23,8 +23,8 @@ phases:
   pre_build:
     commands:
       # Build docker image 
-      - docker build -t $REPOSITORY_URI:latest "$CODEBUILD_SRC_DIR"/App
-      - docker build -t $REPOSITORY_URI:$IMAGE_TAG "$CODEBUILD_SRC_DIR"/App
+      - docker build -t $REPOSITORY_URI:latest "$CODEBUILD_SRC_DIR"/app
+      - docker build -t $REPOSITORY_URI:$IMAGE_TAG "$CODEBUILD_SRC_DIR"/app
       # Push docker image to AWS
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
